--- a/app/client/templates/datagrid/grid/grid.html
+++ b/app/client/templates/datagrid/grid/grid.html
@@ -1,8 +1,9 @@
 <template name="Grid">
   <div class="col-xs-12 grid">
-        <div class="row pt mt centered">
-         
+        <div class="row pt centered">
+         <div class="constainer row" id='gridContainer'>
 		        <div id="selectiondatagrid"></div>
+		  </div>
 	    	
         </div>
 	</div>
