--- a/app/client/templates/genomeView/genomeView.html
+++ b/app/client/templates/genomeView/genomeView.html
@@ -31,13 +31,13 @@
                         {{> slider}}
                     </div>
                     <div class="col-xs-3">
-                        <div id="wait" class='row centered hidden'><h5>Updating ...</h5><img src="/images/loader.gif" alt="Loading .. " style="height: 20px; align-content: center"></div>
+                        <div id="wait" class='row centered hidden'><h5>Updating ...</h5><i class="fa fa-spinner fa-spin"></i></div>
                     </div>
 				</div>
 				{{else}}
                     <div class="row pt mt">
             			<div class="col-xs-4">
-            				<h5><a href="#">Generating view ...</a></h5>		
+            				<h5><a href="#">Generating view ...<i class="fa fa-cog fa-spin"></i></a></h5>		
                    		</div>
                    	</div>
                 {{/if}}
