--- a/app/client/templates/datagrid/consortium/consortium.html
+++ b/app/client/templates/datagrid/consortium/consortium.html
@@ -16,13 +16,13 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th><input type="checkbox" id='chkencode'></th>
-                    <th>Blue</th>
+                    <th><input type="checkbox" id='chkencode' selected></th>
+                    <th bgcolor= "#EDC613"></th>
                     <th>ENCODE</th>
                   </tr>
                   <tr>
-                    <th><input type="checkbox" id='chkroadmap'></th>
-                    <th>green</th>
+                    <th><input type="checkbox" id='chkroadmap' disabled></th>
+                    <th bgcolor="#2DD4CA"></th>
                     <th>ROADMAP</th>
                   </tr>
                 </tbody>
