--- a/app/client/templates/datagrid/overview/overview.html
+++ b/app/client/templates/datagrid/overview/overview.html
@@ -21,8 +21,11 @@
             <!-- end -->
 
             <div id="piechart pt mt centered">
-              Pie chart goes here
-              <p>http://bl.ocks.org/dbuezas/9306799</p>
+              
+              <p><i class="fa fa-bell"></i> Pie chart widget refactor in progress ... </p>
+              
+              <p>Should be available shortly</p>
+              <!-- <p>http://bl.ocks.org/dbuezas/9306799</p> -->
             </div>
           </div>
          </div>
