Edited path on home page

--- a/app/client/templates/home/home.html
+++ b/app/client/templates/home/home.html
@@ -53,6 +53,7 @@
 
     {{> Loading}}
 
+
     <div id="ww">
         <div class="container pt mt pagecentered">
             <div class="row">
@@ -66,7 +67,7 @@
                     </p>
                     <p>The developed technology also allows for unlimited further expansion of the data content and provides an environment for the design of novel tools following the needs of community involved in the exploration of TE biology.</p>
                     <hr>
-                    <a href="/genome" type="button" class="btn btn-warning">Try it now <span class="glyphicon glyphicon-send" style="font-size: 15px"></span></a>
+                    <a href="/heatmap" type="button" class="btn btn-warning">Try it now <span class="glyphicon glyphicon-send" style="font-size: 15px"></span></a>
 
                 </div>
                 <!-- /col-lg-8 -->
@@ -76,6 +77,8 @@
         <!-- /container -->
     </div>
     <!-- /ww -->
+
+    
 
 
 </template>
