Refactored Heatmap and restored sorting functions

--- a/app/client/templates/heatmap/heatmap.css
+++ b/app/client/templates/heatmap/heatmap.css
@@ -116,7 +116,7 @@ text.text-hover {
     width: 1200px;
     height: 580px;
     border: 1px solid #CCCCCC;
-    background-color: white;
+    background-color: transparent;
     
     /*overflow: hidden;*/
 }
