Added messages for guiding user in Data grid

--- a/app/client/templates/datagrid/datagrid.html
+++ b/app/client/templates/datagrid/datagrid.html
@@ -10,12 +10,12 @@
             <div class="col-xs-3 col-xs-offset-9">
                 <!-- order by -->
                 <!-- <span style="float: right; margin-top: 10px; margin-bottom: 10px;"> -->
-                    <h5>Order:</h5> 
+                   <!--  <h5>Order:</h5> 
                         <select id="order" class="form-control">
                             <option value="cell_type_y form-control" selected="selected">by Cell Type</option>
                             <option value="cell_type_category_y form-control">by Cell Type Category</option>
                             <option value="institution_y form-control">by Consortium</option>
-                        </select> 
+                        </select>  -->
                   <!-- </span> -->
                     <!-- end -->
                 </div>
