--- a/app/client/templates/heatmap/heatmap.html
+++ b/app/client/templates/heatmap/heatmap.html
@@ -1,6 +1,8 @@
 <template name="Heatmap">
     {{> Loading}}
     <div id="tooltip" class="hidden">
+        <p><a href="#">Click on cell View Details</a></p>
+        <p>
         <table class="table">
             <tr>
                 <th><span class="pull-left"><a href="#">Experiment : </a></span></th>
@@ -11,11 +13,12 @@
                 <th><span id="repeat-subfamily"></span></th>
             </tr>
         </table>
+        </p>
         <p><span id="score"></span></p>
         <p><span id="max"></span></p>
         <p><span id="min"></span></p>
         
-        <p><span><a href="#">Click to View Details</a></span></p>
+        
     </div>
     <div class="container">
         <div class="row pt mt">
