toastr-full-width

--- a/app/client/templates/datagrid/datagrid.html
+++ b/app/client/templates/datagrid/datagrid.html
@@ -53,11 +53,11 @@
     </div>
     {{/if}}
 
-    {{#if readyForBrowser }}	
+    <!-- {{#if readyForBrowser }}	
     <div class="row centered">
         <a href="/heatmap" id='datasetToBrowser' class='btn btn-success'>Apply Changes <i class="fa fa-thumbs-up"></i></a>
     </div>
-    {{/if}}
+    {{/if}} -->
 
   </div>
 </template>
