--- a/app/client/templates/datagrid/selected_datasets/selected_datasets.html
+++ b/app/client/templates/datagrid/selected_datasets/selected_datasets.html
@@ -15,7 +15,7 @@
             <div class="col-xs-4 pull-right">
               {{#if readyForBrowser }}  
                   <div class="row centered">
-                      <a href="/browser" id='datasetToBrowser' class='btn btn-success'>Apply Changes <i class="fa fa-thumbs-up"></i></a>
+                      <a href="/heatmap" id='datasetToBrowser' class='btn btn-success'>Apply Changes <i class="fa fa-thumbs-up"></i></a>
                   </div>
               {{/if}}
             </div>
